Foi realizado alguns ajustes no back-end, como inclusão de busca pelo id de category e device
