# back-end/src/model/Device.js
@@ -1,16 +1,16 @@
 const conn = require('../../config/connect')
 
 const listAllDevices = async () => {
-    const [devices] = await conn.execute(`SELECT d.id AS Id, d.name AS Name,
-    d.color AS Color, d.part_number AS PartNumber, c.name AS Category FROM device AS d 
+    const [devices] = await conn.execute(`SELECT d.id AS id, d.name AS name,
+    d.color AS color, d.part_number AS part_number, c.name AS category FROM device AS d 
     INNER JOIN category AS c ON c.id = d.id_category`);
 
     return devices;
 }
 
 const listAllDevicesFilter = async (id) => {
-    const [devices] = await conn.execute(`SELECT d.id AS Id, d.name AS Name,
-    d.color AS Color, d.part_number AS PartNumber, c.name AS Category FROM device AS d 
+    const [devices] = await conn.execute(`SELECT d.id AS id, d.name AS name,
+    d.color AS color, d.part_number AS part_number, c.name AS category FROM device AS d 
     INNER JOIN category AS c ON c.id = d.id_category WHERE c.id = ?`, [id]);
 
     return devices;
