# back-end/src/routes/CategoryRouter.js
@@ -1,12 +1,14 @@
 const express = require('express');
 const status = require('http-status-codes');
 
-const { createCategory, listAllCategory, deleteCategory } = require('../controller/CategoryController');
+const { createCategory, listAllCategory, findByIdCategory, deleteCategory } = require('../controller/CategoryController');
 const { fieldValidCategory, categoryExists, categoryNotFound } = require('../middlewares/CategoryExceptionHandler');
 
 const router = express.Router();
 
 router.get("/", listAllCategory);
+
+router.get("/:id", categoryNotFound, findByIdCategory);
 
 router.post("/create", fieldValidCategory, categoryExists, createCategory);
 
